# gclaw

./: .gitignore  CLAUDE.md  README.en.md  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml  release.yml
.qoder/plans/: 默认_非默认项目右侧面板_fe037674.md
.qoder/specs/: gclaw-chat-app.md
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/register/: page.tsx
bmad/: config.yaml
components/: Providers.tsx
components/agents/: AgentsPanel.tsx
components/auth/: AuthPage.tsx  LoginForm.tsx  RegisterForm.tsx
components/channels/: ChannelsPanel.tsx
components/chat/: AskQuestionDialog.tsx  BranchSwitcher.tsx  ChatInput.tsx  ChatLayout.tsx  ChatPanel.tsx  CommandPalette.tsx  (+9 more)
docs/:  记忆系统实现草案版.md  OpenClaw 记忆系统技术设计文档.md  architecture-gclaw.md  bmm-workflow-status.yaml  cross-platform-build.md  memory-system.md  prd-gclaw.md  product-brief-gclaw.md  sprint-planning-gclaw.md
hooks/: useAuth.ts  useChat.ts  useFocusData.ts  useKeyboardShortcuts.ts  useMemoryData.ts  useProject.ts  useTheme.ts
lib/: crypto.ts  tauri.ts  theme-color.ts  validators.ts
scripts/: bundle-sidecar.js  deploy-build.js  standalone-utils.js
src-tauri/: Cargo.toml  splash.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/scripts/: setup-node.sh  setup-python.sh  setup-runtimes.sh
src-tauri/server/: package.json  server.js
src-tauri/src/: lib.rs  main.rs
types/: channels.ts  chat.ts  claude.ts  focus.ts  memory.ts  skills.ts
(+150 files in other folders)
