[package]
name = "gclaw"
version = "0.1.0"
edition = "2021"
description = "GClaw Desktop - AI Chat powered by Claude Code"

[lib]
name = "gclaw_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
